--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -130,7 +130,7 @@ nobase_dist_resdata_DATA = \
 	ENCYC2/UNIT/INDIAN.ICN \
 	ENCYC2/UNIT/ZULU.COL \
 	ENCYC2/UNIT/ZULU.ICN \
-	IMAGE/7K_ICON.BMP \
+	IMAGE/10kingdoms_ICON.BMP \
 	IMAGE/CHINESE.COL \
 	IMAGE/CHINESE.ICN \
 	IMAGE/CREDITS1.COL \
