Add automatic README copy rule to Makefile.am

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,3 +6,9 @@ doc_DATA = COPYING README
 
 # these are included recursively by dist
 EXTRA_DIST = doc packaging tools
+
+# Always ensure README exists by copying from README.md
+all-local: README
+
+README: README.md
+	cp -f README.md README
